--- a/tic tak toe/index.html
+++ b/tic tak toe/index.html
@@ -4,7 +4,7 @@
 		<title>Simple tik tak toe game html5 & css </title>
 	<link rel="stylesheet" href="css/style.css">
 	</head>
-    <body>
+    <body background="background.jpg">
     
 <div class="tic-tac-toe">
   <input class="player-1 left first-column top first-row first-diagonal turn-1" id="block1-1-1" type="radio"/>
